adding support for fetching data from the weather underground api
